# qws

./: rustfmt.toml
crates/qws/: Cargo.toml
crates/qws-lang/: Cargo.toml
crates/qws-lang/examples/: simple.qws
crates/qws-lang/src/: lexer.rs  lib.rs  main.rs  token.rs
crates/qws/src/: main.rs
